尝试修复编译出错的问题

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: EarthMessenger的个人网站
-description:  EarthMessenger的个人网站，放一些乱七八糟的网页和文章。
-url: https://earthmessenger.github.io/
-markdown: kramdown
+name: "EarthMessenger的个人网站"
+description:  "EarthMessenger的个人网站，放一些乱七八糟的网页和文章。"
+url: "earthmessenger.github.io"
+markdown: "kramdown"
