--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,1 @@
-name: "EarthMessenger的个人网站"
-description:  "EarthMessenger的个人网站，放一些乱七八糟的网页和文章。"
-url: "earthmessenger.github.io"
+markdown: karmdown
